2013-04-11  SAncho Lerena <slerena@artica.es>

	* include/functions_form.php: Moved success lead to end of list.

	* operation/leads/lead_detail.php: CRM W ACL can delete un-managed
	leads directly.

	* operation/side_menu.php: Minimal improvements on user menu.

	* operation/contracts/contract_detail.php: Fixed problem creating crontracts

	* operation/user_report/report_monthly.php: Added link to wo listing.

2013-04-10  Dario Rodriguez <dario@artica.es>

	* integria_demo.sql: Fixed several changes in demo SQL schema.

2013-04-10  Sancho Lerena <slerena@artica.es>

	* extras/migrate.sql,
	integria_db.sql: New fields on tdownload to allow external downloads.

	* index.php,
	operation/download/download_external.php: New mode for downloads, external
	which allows to anyone to download a file release if know the link. Useful
	to share files by mail, p.e.

	* operation/side_menu.php,
	operation/main_menu.php: Workorders now is inside the projects menu, removing
	its own menu.

	* operation/projects/project.php,
	operation/projects/project_detail.php: Removed some detail on project listing
	page, giving less info is helpful to show information better.

	* operation/download/browse.php,
	operation/download/manage_cat.php,
	operation/leads/lead_detail.php,
	operation/workorders/wo.php,
	operation/workorders/wo_category.php,
	operation/workorders/wo_files.php: Minor fixes and usability problems.

2013-04-09  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/setup.php
	  include/functions_config.php
	  include/integria_cron.php: Added parameter
	'months_to_delete_incidents' to setup and
	added function 'delete_incidents' to cron.

2013-04-09  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql: Remove ';'

	* operation/newsletter/issue_creation.php: Remove 'Plain text'.

2013-04-07  Sancho Lerena <slerena@artica.es>

	* operation/companies/company_detail.php: Show only active leads, sorted
	by estimated sale.
