@@ -1,3 +1,8 @@
+2013-04-15  Sancho Lerena <slerena@artica.es>
+
+	* operation/companies/company_detail.php,
+        operation/companies/company_files.php: Solved a few usability problems.
+
 2013-04-11  SAncho Lerena <slerena@artica.es>
 
 	* include/functions_form.php: Moved success lead to end of list.
